# webgpu_cv

./: .gitignore  BUILD.md  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.github/workflows/: build.yaml  build_no_docker.yaml  check_build.yaml  deploy.yaml  deploy_cross.yaml  deploy_prebuilts.yaml  full_deploy.yaml  nodejs.yaml  verify_deploy.yaml
src/: bin.rs  env.rs  game_of_life.rs  gl_utils.rs  image_loader.rs  js_interop.rs  lib.rs  simple_async.rs  timer.rs  webgl.rs
src/renderer/: asset_loader.rs  demo_fractal.rs  demo_mesh.rs  demo_state.rs  demo_stub.rs  demo_uv.rs  engine_state.rs  first.rs  fractal.rs  global_uniform.rs  history.rs  mod.rs  pipeline_loader.rs  premade.rs  preprocessor.rs  shader_loader.rs  stub_demo.rs  triangle.rs  webgpu.rs  webgpu_utils.rs
src/renderer/imgui/: mod.rs  web_platform.rs
src/renderer/imgui_web/: mod.rs  web_platform.rs
src/renderer/shaders/: mandelbrot.fs.wgsl  mandelbrot_aa.fs.wgsl  no_vao_triangle.vert  no_vao_triangle.vert.wgsl  passthrough.vs.wgsl  triangle_colored.vs.wgsl  triangle_fullscreen.vs.wgsl  uv.fs.wgsl  vertex_color.frag  vertex_color.frag.wgsl  vertex_color.fs.wgsl
src/renderer/webgpu/: buffer.rs  draw.rs  mod.rs  premade.rs  texture.rs  uniform.rs  utils.rs
www/: build-data.js  build-data.json  index.html  index.js  package-lock.json  package.json  webpack.common.cjs  webpack.prod.cjs
www/modules/: build-data.js  cv.js  exports_to_wasm.js  localization.js  util.js
www/src/: build-data.js  card.css  common.css  cv.css  cv.js  index.js  localization.js  popup.css  scrollify.css  sidebar.css  util.js
www/style/: card.css  common.css  cv.css  popup.css  sidebar.css
www/wasm/: index.d.ts  index.js  index_bg.js  index_bg.wasm  index_bg.wasm.d.ts
