[package]
name = "my_renderer"
version = "0.1.0"
authors = ["alxs.larionov@gmail.com"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "windowed_demos"
path = "src/bin.rs"

[features]
default = [ ]
web = ["console_error_panic_hook", "wgpu/webgl", "wgpu/webgpu"]
win = ["dep:winit", "dep:env_logger"]

[dependencies]
cfg-if = "1"
wgpu = { version = "0.19" }
bytemuck = { version = "1.15", features = [ "derive" ] }
gpp = "0.6"
glam = "0.25"
wasm-bindgen = "0.2"
log = "0.4"
futures = "0.3"
paste = "1.0"
imgui = { git = "https://github.com/imgui-rs/imgui-rs" }
imgui-winit-support = { git = "https://github.com/imgui-rs/imgui-rs" }
imgui-wgpu = { git = "https://github.com/Yatekii/imgui-wgpu-rs.git", rev = "edc6bc484c44dd3af5b2170757b19c7aa15bface" } # for wgpu 0.19
env_logger = { version = "0.11", optional = true }
winit = { version = "0.29", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_log = "1.0"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Window",
    "Element",
    "Performance",
    "HtmlCanvasElement",
    "Request",
    "Response",
    "MouseEvent",
    "KeyboardEvent" ] }


[dev-dependencies]
wasm-bindgen-test = "0.3"
pretty_assertions = "1.4"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
