[package]
name = "my_renderer"
version = "0.1.0"
authors = ["alxs.larionov@gmail.com"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "windowed_demos"
path = "src/bin.rs"

[features]
default = [ ]
web = ["dep:console_error_panic_hook", "dep:wasm-bindgen-futures",
    "dep:js-sys", "dep:console_log", "dep:web-sys",
    "wgpu/webgl", "wgpu/webgpu"]
win = ["dep:winit", "dep:env_logger", "imgui_win"]
imgui_web = ["dep:imgui", "imgui/wasm", "dep:imgui-wgpu"]
imgui_win = ["dep:imgui", "dep:imgui-wgpu", "dep:imgui-winit-support", "dep:tokio"]

[dependencies]
cfg-if = "1"
wgpu = { version = "0.19" }
bytemuck = { version = "1.15", features = [ "derive" ] }
gpp = "0.6"
glam = "0.25"
wasm-bindgen = "0.2"
log = "0.4"
futures = "0.3"
paste = "1.0"

# standalone window app
#imgui = { version = "0.11", optional = true}
#imgui-winit-support = { version = "0.11", optional = true }
#imgui-wgpu = { version = "0.24", optional = true }
imgui = { git = "https://github.com/imgui-rs/imgui-rs", optional = true}
imgui-winit-support = { git = "https://github.com/imgui-rs/imgui-rs", optional = true }
imgui-wgpu = { git = "https://github.com/Yatekii/imgui-wgpu-rs.git", rev = "edc6bc484c44dd3af5b2170757b19c7aa15bface", optional = true } # for wgpu 0.19
env_logger = { version = "0.11", optional = true }
winit = { version = "0.29", optional = true }
tokio = { version = "1.37.0", optional = true, features = ["rt"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
console_log = { version = "1.0", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "console",
    "Document",
    "Window",
    "Element",
    "Performance",
    "CssRule",
    "HtmlCanvasElement",
    "Request",
    "Response",
    "MouseEvent",
    "KeyboardEvent" ]}


[dev-dependencies]
wasm-bindgen-test = "0.3"
pretty_assertions = "1.4"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
